@@ -58,6 +58,7 @@ export(as.chron.IDate,as.chron.ITime)
 
 S3method("[", ITime)
 S3method(as.character, ITime)
+S3method(as.data.frame, ITime)
 ## S3method(as.chron, IDate)
 ## S3method(as.chron, ITime)
 S3method(as.Date, IDate)
